# Backup-Manager

./: .gitignore  AUTHORS  CHANGELOG  ChangeLog  Dockerfile  INSTALL  INSTALL.md  Makefile  NEWS  README  README.md  THANKS  TODO  VERSION  backup-manager  backup-manager-purge  backup-manager-upload  backup-manager.conf  backup-manager.conf.tpl  description-pak
BackupManager/: Config.pm  Dialog.pm  Logger.pm
contrib/: sanitize.sh  upgrade-conffile.sh
doc/: DISCLAIMER  Makefile  README  backup-manager.sgml  common.ent  developers-reference.sgml  user-guide.sgml  user-guide.txt  version.ent
doc-pak/: AUTHORS  README  THANKS
doc-pak/doc/: Makefile  README.dbus  user-guide.sgml  version.ent
lib/: actions.sh  backup-methods.sh  burning-methods.sh  dbus.sh  dialog.sh  externals.sh  files.sh  gettext-dummy.sh  gettext-real.sh  gettext.sh  logger.sh  md5sum.sh  sanitize.sh  upload-methods.sh
man/: backup-manager-upload.3  backup-manager-upload.8  backup-manager.3  backup-manager.8
po/: .ext  LINGUAS  Makefile  backup-manager.pot  cs.po  de.po  es.po  fr.po  it.po  nl.po  ru.po  vi.po
t/: Makefile  run-tests.sh  t01-tarball.sh  t01.2tarball-bug63.sh  t01.sh  t02-rsync.sh  t02.sh  t03-none.sh  t04-tarball-blacklist.sh  t05-hooks.sh  t06-bug14.sh  t07-dar.sh  t08-regexp.sh  t09-tarball-incremental.sh  t10-tarball-dar-blacklist.sh  t11-pipe-method.sh  t11.2-pipe-encrypted.sh  t12-tarball-incremental-dar.sh  t14-purging-system.sh  t15-dupes.sh  t15.2-dupes-date.sh  t16-whitespaces.sh  t17-tarball-lzma.sh  t18-tarball-encryption.sh  t19-masterdatevalue.sh  t20-hooks-bug235.sh  t21-tarball-xz.sh  t22-tarball-zstd.sh  testlib.sh
t/confs/: base.conf  burning.conf  mariadb.conf  mysql.conf  pipe.conf  svn.conf  tarball-incremental.conf  tarball.conf  upload-ftp.conf  upload-global.conf  upload-rsync.conf  upload-ssh.conf
ui/: AUTHORS  Makefile  Makefile.am  Makefile.in  aclocal.m4  backup-manager-ui.glade  backup-manager-ui.gladep  config.h  config.h.in  config.status  configure  configure.in
ui/data/: backup-manager-preferences.glade
ui/po/: Makefile  Makefile.in
ui/src/: Makefile  Makefile.am  Makefile.in  bm-libconf.c  bm-libconf.h  bm-libconfig.c  bm-libconfig.h  bm.c  bm.h  bm_configuration_manager.c  bm_configuration_manager.h  callbacks.c  callbacks.h  customconfig.h  dyn_interfaces.c  dyn_interfaces.h  global_widgets.h  interface.c  interface.h  main.c  mem_manager.c  mem_manager.h  strLcpy.c  strLcpy.h  test_bm.c
ui/src/t/: Makefile.am  t_bm_configuration_manager.c  t_libmem.c
ui/t/: Makefile.am  t-bm-libconfig.c  t_bm_configuration_manager.c  t_libmem.c
